@startuml

title __REFERENCE's Class Diagram__\n

  package uk.ac.ebi.pride.archive.dataprovider.reference {
    class DefaultReference {
        ~ referenceLine : String
        ~ pubmedID : Integer
        - doi : String
        + DefaultReference()
        + getReferenceLine()
        + getPubmedId()
        + getDoi()
        + getId()
    }
  }
  

  package uk.ac.ebi.pride.archive.dataprovider.reference {
    interface ReferenceProvider {
        {abstract} + getReferenceLine()
        {abstract} + getPubmedId()
        {abstract} + getDoi()
    }
  }
  

  DefaultReference -up-|> ReferenceProvider
  DefaultReference -up-|> Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
